--- a/22127154.ipynb
+++ b/22127154.ipynb
@@ -1349,12 +1349,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Tìm kiếm mô hình tốt nhất\n",
-    "from models.tuning import lightgbm_tuning, random_forest_tuning\n",
+    "from models.tuning import lightgbm_tuning, random_forest_tuning, neural_network_tuning\n",
     "import time"
    ]
   },
@@ -1583,6 +1583,102 @@
     "# Đánh giá trên tập test\n",
     "test_accuracy = best_lightgbm_model.evaluate(X_test, y_test)\n",
     "print(f\"==========> Test accuracy: {test_accuracy:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.4. Huấn luyện và đánh giá mô hình Neural Network\n",
+    "\n",
+    "Sau khi chạy thử nghiệm mô hình Neural Network nhiều lần, em nhận thấy mô hình này không phù hợp với dữ liệu của bài toán. Do đó, em sẽ không sử dụng mô hình Neural Network trong bài làm này. (ngay cả khi em thử bỏ các đặc trưng dạng binary, mô hình vẫn không hiệu quả)\n",
+    "\n",
+    "Thầy có thể tham khảo kết quả của quá trình huấn luyện tại 2 sheet trong trang [Google Sheet này](https://docs.google.com/spreadsheets/d/1FCYKaQQGHqZ_cgiAy3avVQ2tUBjgDqjQdChD2TFzslw/edit?usp=sharing)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Main Workflow for Neural Network Tuning\n",
+    "\n",
+    "# nn_param_grid = {\n",
+    "#     \"hidden_layer_sizes\": [\n",
+    "#         [64, 32],\n",
+    "#         # [128, 64],\n",
+    "#         # [128, 64, 32],\n",
+    "#         # [256, 128, 64],\n",
+    "#         # [128, 128, 64, 32],\n",
+    "#         # None, # Decorator\n",
+    "#     ],\n",
+    "#     \"activation\": [\n",
+    "#         \"relu\",\n",
+    "#         # \"sigmoid\",\n",
+    "#         # None, # Decorator,\n",
+    "#     ],\n",
+    "#     \"learning_rate\": [\n",
+    "#         0.01,\n",
+    "#         # 0.001,\n",
+    "#         # 0.0001,\n",
+    "#         # None, # Decorator\n",
+    "#     ],\n",
+    "#     \"epochs\": [\n",
+    "#         50,\n",
+    "#         # 100,\n",
+    "#         # 200,\n",
+    "#         # None, # Decorator\n",
+    "#     ],\n",
+    "#     \"batch_size\": [\n",
+    "#         32,\n",
+    "#         # 64,\n",
+    "#         # None, # Decorator\n",
+    "#     ],\n",
+    "#     \"dropout_rate\": [\n",
+    "#         0.2,\n",
+    "#         # 0.3,\n",
+    "#         # 0.4,\n",
+    "#         # 0.5,\n",
+    "#         # 0.6,\n",
+    "#         # None, # Decorator\n",
+    "#     ],\n",
+    "#     \"l2_lambda\": [\n",
+    "#         0.01,\n",
+    "#         # 0.001,\n",
+    "#         # 0.0001,\n",
+    "#         # None, # Decorator\n",
+    "#     ],\n",
+    "# }\n",
+    "\n",
+    "# n_nn_hyperparams = np.prod([len(v) for v in nn_param_grid.values()])\n",
+    "\n",
+    "# # Lấy thời gian hiện tại và tạo chuỗi thời gian\n",
+    "# current_time = time.strftime(\"%Y%m%d_%H%M%S\")\n",
+    "# # Đặt tên file đầu ra với chuỗi thời gian\n",
+    "# nn_output_file = f\"./output/{current_time}_neural_network_best_params_{n_nn_hyperparams}_{n_features}.csv\"\n",
+    "\n",
+    "# # Tìm mô hình tốt nhất dựa trên validation set\n",
+    "# best_nn_params, best_nn_val_acc, best_nn_model = (\n",
+    "#     neural_network_tuning.neural_network_hyperparameter_tuning(\n",
+    "#         X_train,\n",
+    "#         y_train,\n",
+    "#         X_val,\n",
+    "#         y_val,\n",
+    "#         param_grid=nn_param_grid,\n",
+    "#         output_file=nn_output_file,\n",
+    "#         max_workers=MAX_WORKERS,\n",
+    "#     )\n",
+    "# )\n",
+    "\n",
+    "# print(f\"==========> Best validation accuracy: {best_nn_val_acc:.4f}\")\n",
+    "# print(f\"==========> Best parameters: {best_nn_params}\")\n",
+    "\n",
+    "# if best_nn_model is None:\n",
+    "#     print(\"No valid model found. Skipping test evaluation.\")\n",
+    "# else:\n",
+    "#     test_accuracy = best_nn_model.evaluate(X_test, y_test)\n",
+    "#     print(f\"==========> Test accuracy: {test_accuracy:.4f}\")"
    ]
   }
  ],
