Add model weight saving and loading functionality for LightGBM and Random Forest; update .gitignore

--- a/22127154.ipynb
+++ b/22127154.ipynb
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1415,22 +1415,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-05 17:13:30,541 - INFO - Using 18 workers for hyperparameter tuning\n",
-      "2025-01-05 17:13:30,600 - INFO - Total tasks to complete: 12\n",
-      "2025-01-05 17:13:56,567 - INFO - Task 1/12 completed with: n_estimators=10, max_depth=5, min_samples_split=2, min_samples_leaf=1, train_acc=0.8931, val_acc=0.8200, start_time=2025-01-05 17:13:30, end_time=2025-01-05 17:13:56, training_time=25.74s\n",
-      "2025-01-05 17:13:56,692 - INFO - Task 2/12 completed with: n_estimators=10, max_depth=5, min_samples_split=2, min_samples_leaf=2, train_acc=0.8919, val_acc=0.8200, start_time=2025-01-05 17:13:30, end_time=2025-01-05 17:13:56, training_time=25.88s\n",
-      "2025-01-05 17:14:03,729 - INFO - Task 3/12 completed with: n_estimators=10, max_depth=7, min_samples_split=2, min_samples_leaf=2, train_acc=0.9600, val_acc=0.8725, start_time=2025-01-05 17:13:30, end_time=2025-01-05 17:14:03, training_time=32.90s\n",
-      "2025-01-05 17:14:04,249 - INFO - Task 4/12 completed with: n_estimators=10, max_depth=7, min_samples_split=2, min_samples_leaf=1, train_acc=0.9675, val_acc=0.8650, start_time=2025-01-05 17:13:30, end_time=2025-01-05 17:14:04, training_time=33.43s\n",
-      "2025-01-05 17:14:08,100 - INFO - Task 5/12 completed with: n_estimators=10, max_depth=None, min_samples_split=2, min_samples_leaf=2, train_acc=0.9731, val_acc=0.8700, start_time=2025-01-05 17:13:30, end_time=2025-01-05 17:14:08, training_time=37.25s\n",
-      "2025-01-05 17:14:09,472 - INFO - Task 6/12 completed with: n_estimators=10, max_depth=None, min_samples_split=2, min_samples_leaf=1, train_acc=0.9969, val_acc=0.8675, start_time=2025-01-05 17:13:30, end_time=2025-01-05 17:14:09, training_time=38.64s\n",
-      "2025-01-05 17:14:17,704 - INFO - Task 7/12 completed with: n_estimators=20, max_depth=5, min_samples_split=2, min_samples_leaf=2, train_acc=0.9019, val_acc=0.8275, start_time=2025-01-05 17:13:30, end_time=2025-01-05 17:14:17, training_time=46.86s\n",
-      "2025-01-05 17:14:17,930 - INFO - Task 8/12 completed with: n_estimators=20, max_depth=5, min_samples_split=2, min_samples_leaf=1, train_acc=0.9031, val_acc=0.8300, start_time=2025-01-05 17:13:30, end_time=2025-01-05 17:14:17, training_time=47.09s\n",
-      "2025-01-05 17:14:26,984 - INFO - Task 9/12 completed with: n_estimators=20, max_depth=7, min_samples_split=2, min_samples_leaf=2, train_acc=0.9656, val_acc=0.8950, start_time=2025-01-05 17:13:30, end_time=2025-01-05 17:14:26, training_time=56.14s\n",
-      "2025-01-05 17:14:27,390 - INFO - Task 10/12 completed with: n_estimators=20, max_depth=7, min_samples_split=2, min_samples_leaf=1, train_acc=0.9712, val_acc=0.8825, start_time=2025-01-05 17:13:30, end_time=2025-01-05 17:14:27, training_time=56.54s\n",
-      "2025-01-05 17:14:31,929 - INFO - Task 11/12 completed with: n_estimators=20, max_depth=None, min_samples_split=2, min_samples_leaf=2, train_acc=0.9819, val_acc=0.8825, start_time=2025-01-05 17:13:30, end_time=2025-01-05 17:14:31, training_time=61.05s\n",
-      "2025-01-05 17:14:34,440 - INFO - Task 12/12 completed with: n_estimators=20, max_depth=None, min_samples_split=2, min_samples_leaf=1, train_acc=0.9994, val_acc=0.8750, start_time=2025-01-05 17:13:30, end_time=2025-01-05 17:14:34, training_time=63.57s\n",
-      "2025-01-05 17:15:13,597 - INFO - Hyperparameter tuning completed.\n",
-      "2025-01-05 17:15:13,598 - INFO - Best parameters: {'n_estimators': 20, 'max_depth': 7, 'min_samples_split': 2, 'min_samples_leaf': 2}, Best Validation Accuracy: 0.8950\n"
+      "2025-01-05 22:32:35,881 - INFO - Using 18 workers for hyperparameter tuning\n",
+      "2025-01-05 22:32:35,946 - INFO - Total tasks to complete: 12\n",
+      "2025-01-05 22:33:05,093 - INFO - Task 1/12 completed with: n_estimators=10, max_depth=5, min_samples_split=2, min_samples_leaf=1, train_acc=0.8931, val_acc=0.8200, start_time=2025-01-05 22:32:36, end_time=2025-01-05 22:33:05, training_time=28.91s\n",
+      "2025-01-05 22:33:05,455 - INFO - Task 2/12 completed with: n_estimators=10, max_depth=5, min_samples_split=2, min_samples_leaf=2, train_acc=0.8919, val_acc=0.8200, start_time=2025-01-05 22:32:36, end_time=2025-01-05 22:33:05, training_time=29.27s\n",
+      "2025-01-05 22:33:14,059 - INFO - Task 3/12 completed with: n_estimators=10, max_depth=7, min_samples_split=2, min_samples_leaf=1, train_acc=0.9675, val_acc=0.8650, start_time=2025-01-05 22:32:36, end_time=2025-01-05 22:33:14, training_time=37.88s\n",
+      "2025-01-05 22:33:16,566 - INFO - Task 4/12 completed with: n_estimators=10, max_depth=7, min_samples_split=2, min_samples_leaf=2, train_acc=0.9600, val_acc=0.8725, start_time=2025-01-05 22:32:36, end_time=2025-01-05 22:33:16, training_time=40.38s\n",
+      "2025-01-05 22:33:17,858 - INFO - Task 5/12 completed with: n_estimators=10, max_depth=None, min_samples_split=2, min_samples_leaf=2, train_acc=0.9731, val_acc=0.8700, start_time=2025-01-05 22:32:36, end_time=2025-01-05 22:33:17, training_time=41.66s\n",
+      "2025-01-05 22:33:19,907 - INFO - Task 6/12 completed with: n_estimators=10, max_depth=None, min_samples_split=2, min_samples_leaf=1, train_acc=0.9969, val_acc=0.8675, start_time=2025-01-05 22:32:36, end_time=2025-01-05 22:33:19, training_time=43.71s\n",
+      "2025-01-05 22:33:28,874 - INFO - Task 7/12 completed with: n_estimators=20, max_depth=5, min_samples_split=2, min_samples_leaf=2, train_acc=0.9019, val_acc=0.8275, start_time=2025-01-05 22:32:36, end_time=2025-01-05 22:33:28, training_time=52.66s\n",
+      "2025-01-05 22:33:29,044 - INFO - Task 8/12 completed with: n_estimators=20, max_depth=5, min_samples_split=2, min_samples_leaf=1, train_acc=0.9031, val_acc=0.8300, start_time=2025-01-05 22:32:36, end_time=2025-01-05 22:33:29, training_time=52.85s\n",
+      "2025-01-05 22:33:39,866 - INFO - Task 9/12 completed with: n_estimators=20, max_depth=7, min_samples_split=2, min_samples_leaf=2, train_acc=0.9656, val_acc=0.8950, start_time=2025-01-05 22:32:36, end_time=2025-01-05 22:33:39, training_time=63.63s\n",
+      "2025-01-05 22:33:40,198 - INFO - Task 10/12 completed with: n_estimators=20, max_depth=7, min_samples_split=2, min_samples_leaf=1, train_acc=0.9712, val_acc=0.8825, start_time=2025-01-05 22:32:36, end_time=2025-01-05 22:33:40, training_time=63.98s\n",
+      "2025-01-05 22:33:45,434 - INFO - Task 11/12 completed with: n_estimators=20, max_depth=None, min_samples_split=2, min_samples_leaf=2, train_acc=0.9819, val_acc=0.8825, start_time=2025-01-05 22:32:36, end_time=2025-01-05 22:33:45, training_time=69.13s\n",
+      "2025-01-05 22:33:48,223 - INFO - Task 12/12 completed with: n_estimators=20, max_depth=None, min_samples_split=2, min_samples_leaf=1, train_acc=0.9994, val_acc=0.8750, start_time=2025-01-05 22:32:36, end_time=2025-01-05 22:33:48, training_time=71.92s\n",
+      "2025-01-05 22:34:32,235 - INFO - Hyperparameter tuning completed.\n",
+      "2025-01-05 22:34:32,235 - INFO - Best parameters: {'n_estimators': 20, 'max_depth': 7, 'min_samples_split': 2, 'min_samples_leaf': 2}, Best Validation Accuracy: 0.8950\n"
      ]
     },
     {
@@ -1467,8 +1467,33 @@
     "print(f\"==========> Best parameters: {best_rf_params}\")\n",
     "\n",
     "# Đánh giá trên tập test\n",
-    "test_accuracy = best_rf_model.evaluate(X_test, y_test)\n",
-    "print(f\"==========> Test accuracy: {test_accuracy:.4f}\")"
+    "test_rf_accuracy = best_rf_model.evaluate(X_test, y_test)\n",
+    "print(f\"==========> Test accuracy: {test_rf_accuracy:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========> Test accuracy: 0.2370\n"
+     ]
+    }
+   ],
+   "source": [
+    "from models.random_forest import RandomForestModel\n",
+    "\n",
+    "# Load model\n",
+    "loaded_rf_model = RandomForestModel()\n",
+    "loaded_rf_model.load_model_weights(\"weights_random_forest_best.json\")\n",
+    "\n",
+    "# Đánh giá trên tập test\n",
+    "test_rf_loaded_accuracy = loaded_rf_model.evaluate(X_test, y_test)\n",
+    "print(f\"==========> Test accuracy: {test_rf_loaded_accuracy:.4f}\")"
    ]
   },
   {
@@ -1480,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1525,25 +1550,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-05 17:15:13,640 - INFO - Using 18 workers for hyperparameter tuning\n",
-      "2025-01-05 17:15:13,686 - INFO - Total tasks to complete: 8\n",
-      "2025-01-05 17:15:30,894 - INFO - Task 1/8 completed with: n_estimators=10, learning_rate=0.1, max_depth=3, lambda_l1=0.0, lambda_l2=0.0, train_acc=0.5056, val_acc=0.4850, start_time=2025-01-05 17:15:13, end_time=2025-01-05 17:15:30, training_time=17.02s\n",
-      "2025-01-05 17:15:31,340 - INFO - Task 2/8 completed with: n_estimators=10, learning_rate=0.1, max_depth=3, lambda_l1=0.01, lambda_l2=0.01, train_acc=0.5050, val_acc=0.4850, start_time=2025-01-05 17:15:13, end_time=2025-01-05 17:15:31, training_time=17.46s\n",
-      "2025-01-05 17:15:31,503 - INFO - Task 3/8 completed with: n_estimators=10, learning_rate=0.1, max_depth=3, lambda_l1=0.01, lambda_l2=0.0, train_acc=0.5050, val_acc=0.4850, start_time=2025-01-05 17:15:13, end_time=2025-01-05 17:15:31, training_time=17.62s\n",
-      "2025-01-05 17:15:31,535 - INFO - Task 4/8 completed with: n_estimators=10, learning_rate=0.1, max_depth=3, lambda_l1=0.0, lambda_l2=0.01, train_acc=0.5050, val_acc=0.4850, start_time=2025-01-05 17:15:13, end_time=2025-01-05 17:15:31, training_time=17.66s\n",
-      "2025-01-05 17:16:24,406 - INFO - Task 5/8 completed with: n_estimators=50, learning_rate=0.1, max_depth=3, lambda_l1=0.01, lambda_l2=0.01, train_acc=0.9587, val_acc=0.9000, start_time=2025-01-05 17:15:13, end_time=2025-01-05 17:16:24, training_time=70.47s\n",
-      "2025-01-05 17:16:24,445 - INFO - Task 6/8 completed with: n_estimators=50, learning_rate=0.1, max_depth=3, lambda_l1=0.0, lambda_l2=0.0, train_acc=0.9656, val_acc=0.9100, start_time=2025-01-05 17:15:13, end_time=2025-01-05 17:16:24, training_time=70.52s\n",
-      "2025-01-05 17:16:24,480 - INFO - Task 7/8 completed with: n_estimators=50, learning_rate=0.1, max_depth=3, lambda_l1=0.01, lambda_l2=0.0, train_acc=0.9663, val_acc=0.9100, start_time=2025-01-05 17:15:13, end_time=2025-01-05 17:16:24, training_time=70.55s\n",
-      "2025-01-05 17:16:24,562 - INFO - Task 8/8 completed with: n_estimators=50, learning_rate=0.1, max_depth=3, lambda_l1=0.0, lambda_l2=0.01, train_acc=0.9650, val_acc=0.9100, start_time=2025-01-05 17:15:13, end_time=2025-01-05 17:16:24, training_time=70.64s\n",
-      "2025-01-05 17:17:25,122 - INFO - Hyperparameter tuning completed.\n",
-      "2025-01-05 17:17:25,123 - INFO - Best parameters: {'n_estimators': 50, 'learning_rate': 0.1, 'max_depth': 3, 'lambda_l1': 0.0, 'lambda_l2': 0.0}, Best Validation Accuracy: 0.9100\n"
+      "2025-01-05 22:35:19,496 - INFO - Using 18 workers for hyperparameter tuning\n",
+      "2025-01-05 22:35:19,531 - INFO - Total tasks to complete: 8\n",
+      "2025-01-05 22:35:37,168 - INFO - Task 1/8 completed with: n_estimators=10, learning_rate=0.1, max_depth=3, lambda_l1=0.01, lambda_l2=0.01, train_acc=0.5050, val_acc=0.4850, start_time=2025-01-05 22:35:19, end_time=2025-01-05 22:35:37, training_time=17.43s\n",
+      "2025-01-05 22:35:37,613 - INFO - Task 2/8 completed with: n_estimators=10, learning_rate=0.1, max_depth=3, lambda_l1=0.0, lambda_l2=0.01, train_acc=0.5050, val_acc=0.4850, start_time=2025-01-05 22:35:19, end_time=2025-01-05 22:35:37, training_time=17.87s\n",
+      "2025-01-05 22:35:37,735 - INFO - Task 3/8 completed with: n_estimators=10, learning_rate=0.1, max_depth=3, lambda_l1=0.0, lambda_l2=0.0, train_acc=0.5056, val_acc=0.4850, start_time=2025-01-05 22:35:19, end_time=2025-01-05 22:35:37, training_time=17.99s\n",
+      "2025-01-05 22:35:37,883 - INFO - Task 4/8 completed with: n_estimators=10, learning_rate=0.1, max_depth=3, lambda_l1=0.01, lambda_l2=0.0, train_acc=0.5050, val_acc=0.4850, start_time=2025-01-05 22:35:19, end_time=2025-01-05 22:35:37, training_time=18.15s\n",
+      "2025-01-05 22:36:35,920 - INFO - Task 5/8 completed with: n_estimators=50, learning_rate=0.1, max_depth=3, lambda_l1=0.0, lambda_l2=0.0, train_acc=0.9656, val_acc=0.9100, start_time=2025-01-05 22:35:19, end_time=2025-01-05 22:36:35, training_time=76.15s\n",
+      "2025-01-05 22:36:36,237 - INFO - Task 6/8 completed with: n_estimators=50, learning_rate=0.1, max_depth=3, lambda_l1=0.01, lambda_l2=0.0, train_acc=0.9663, val_acc=0.9100, start_time=2025-01-05 22:35:19, end_time=2025-01-05 22:36:36, training_time=76.45s\n",
+      "2025-01-05 22:36:36,382 - INFO - Task 7/8 completed with: n_estimators=50, learning_rate=0.1, max_depth=3, lambda_l1=0.01, lambda_l2=0.01, train_acc=0.9587, val_acc=0.9000, start_time=2025-01-05 22:35:19, end_time=2025-01-05 22:36:36, training_time=76.59s\n",
+      "2025-01-05 22:36:36,679 - INFO - Task 8/8 completed with: n_estimators=50, learning_rate=0.1, max_depth=3, lambda_l1=0.0, lambda_l2=0.01, train_acc=0.9650, val_acc=0.9100, start_time=2025-01-05 22:35:19, end_time=2025-01-05 22:36:36, training_time=76.90s\n",
+      "2025-01-05 22:37:43,311 - INFO - Hyperparameter tuning completed.\n",
+      "2025-01-05 22:37:43,312 - INFO - Best parameters: {'n_estimators': 50, 'learning_rate': 0.1, 'max_depth': 3, 'lambda_l1': 0.0, 'lambda_l2': 0.0}, Best Validation Accuracy: 0.9100\n"
      ]
     },
     {
@@ -1581,8 +1606,33 @@
     "print(f\"==========> Best parameters: {best_lightgbm_params}\")\n",
     "\n",
     "# Đánh giá trên tập test\n",
-    "test_accuracy = best_lightgbm_model.evaluate(X_test, y_test)\n",
-    "print(f\"==========> Test accuracy: {test_accuracy:.4f}\")"
+    "test_lightgbm_accuracy = best_lightgbm_model.evaluate(X_test, y_test)\n",
+    "print(f\"==========> Test accuracy: {test_lightgbm_accuracy:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========> Test accuracy: 0.2370\n"
+     ]
+    }
+   ],
+   "source": [
+    "from models.lightgbm import LightGBMModel\n",
+    "\n",
+    "# Load model\n",
+    "loaded_lightgbm_model = LightGBMModel()\n",
+    "loaded_lightgbm_model.load_model_weights(\"weights_lightgbm_best.json\")\n",
+    "\n",
+    "# Đánh giá trên tập test\n",
+    "test_lightgbm_loaded_accuracy = loaded_lightgbm_model.evaluate(X_test, y_test)\n",
+    "print(f\"==========> Test accuracy: {test_lightgbm_loaded_accuracy:.4f}\")"
    ]
   },
   {
